--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Jumping game</title>
 
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bangers&display=swap" rel="stylesheet">
+
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,7 +29,8 @@
     <li>Don't go to the borders of the lands, as you may fall.</li>
   </ul>
 
-  <button id="startBtn">Start</button>
+  <button id="restartBtn" class="btn">Restart</button>
+  <button id="startBtn" class="btn">Start</button>
 
   <!-- backgounds -->
   <img src="images/bg1.png" alt="" id="bg1">
