Update HTML to include keyboard controls section

--- a/index.html
+++ b/index.html
@@ -29,6 +29,13 @@
     <li>Don't go to the borders of the lands, as you may fall.</li>
   </ul>
 
+  <h2>Keyboard Controls:</h2>
+  <ul>
+    <li><strong>← / → (Left/Right):</strong> Move left or right</li>
+    <li><strong>Space + ← / →:</strong> Jump to another platform</li>
+  </ul>
+
+
   <button id="restartBtn" class="btn">Restart</button>
   <button id="startBtn" class="btn">Start</button>
 
